Fix T92368: LMB mouse events (Selecting, doubleclicks etc) are broken